--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta chartset="UTF-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>Excursion</title>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
+
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon!)</a></p>
@@ -16,10 +17,11 @@
     <h2>Your personal travel guide</h2>
     <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
     <p><img src="resources/images/camp.jpg"></p>
-    <p><img src="resources/images/phone.jpg"></p>
+    <p><img src="resources/images/phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a href="#">Download Excursion (Coming Soon!)</a></p>
 </body>
+
 <footer>
     <p>© Excursion</p>
 </footer>
